@@ -109,6 +109,7 @@
                 <div class="ib-last"></div>
                 <div class="ib-rewind"></div>
                 <div class="ib-forward"></div>
+                <div class="ib-play-pause"></div>
             </div>
         </div>
 
