@@ -82,6 +82,7 @@
 @import "scss/media/last";
 @import "scss/media/rewind";
 @import "scss/media/forward";
+@import "scss/media/play-pause";
 
 
 /*
