@@ -1,0 +1,22 @@
+@import "../_foundation/styles";
+
+.ib-play-pause {
+    @include button;
+
+
+    &:before {
+        width: 0; 
+        height: 0; 
+        border-top: calc(#{$size} - #{$border-width * 2}) solid transparent;
+        border-bottom: calc(#{$size} - #{$border-width * 2}) solid transparent;
+        border-left: calc(#{$size} - #{$border-width * 2} - #{$border-width / 2}) solid $dark-color;
+    }
+
+    &:after {
+        border-left: $border-width solid $dark-color;
+        border-right: $border-width solid $dark-color;
+        width: $border-width / 3;
+        height: 100%;
+        right: 0;
+    }
+}
